Add recommended lenis styles. Fix canvas not sizing correctly

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,4 +14,28 @@
     body {
         @apply bg-black text-white text-base;
     }
+
+    /*
+    * Lenis recommended styles
+    */
+    html.lenis,
+    html.lenis body {
+        height: auto;
+    }
+
+    .lenis.lenis-smooth {
+        scroll-behavior: auto !important;
+    }
+
+    .lenis.lenis-smooth [data-lenis-prevent] {
+        overscroll-behavior: contain;
+    }
+
+    .lenis.lenis-stopped {
+        overflow: hidden;
+    }
+
+    .lenis.lenis-smooth iframe {
+        pointer-events: none;
+    }
 }
