--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -46,4 +46,8 @@
     .container {
         @apply md:max-w-xl lg:max-w-2xl xl:max-w-3xl 2xl:max-w-4xl;
     }
+
+    .link {
+        @apply border-b  border-inherit;
+    }
 }
